opam-version: "2.0"
name: "twostep"
version: "1.0.0"
synopsis: "HOTP and TOTP algorithms for 2-step verification (for OCaml)"
description: """
This project implements algorithms for 2-step verification, being the
HMAC-based One-Time Password (RFC4226) and the Time-based One-Time Password
(RFC 6238).
"""
license: "MIT"
maintainer: "marcoonroad@gmail.com"
authors: ["Marco Aurélio da Silva"]
homepage: "https://github.com/marcoonroad/twostep"
bug-reports: "https://github.com/marcoonroad/twostep/issues"
dev-repo: "git+https://github.com/marcoonroad/twostep.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.03.0"}
  "base" {>= "v0.9.3"}
  "hex" {>= "1.2.0"}
  "nocrypto" {>= "0.5.4-1"}
  "mirage-crypto" {>= "0.6.1"}
  "mirage-crypto-rng" {>= "0.6.1"}
  "dune" {build & >= "1.6.2"}
  "cmdliner" {>= "1.0.2"}
  "bisect_ppx" {>= "1.4.0"}
  "alcotest" {>= "0.8.4"}
]
