opam-version: "2.0"
name: "twostep"
version: "1.0.0"
synopsis: "HOTP and TOTP algorithms for 2-step verification (for OCaml)"
description: """
This project implements algorithms for 2-step verification, being the
HMAC-based One-Time Password (RFC4226) and the Time-based One-Time Password
(RFC 6238).
"""
license: "MIT"
maintainer: "Marco Aurélio da Silva <marcoonroad@gmail.com>"
authors: ["Marco Aurélio da Silva <marcoonroad@gmail.com>"]
homepage: "https://github.com/marcoonroad/twostep"
bug-reports: "https://github.com/marcoonroad/twostep/issues"
dev-repo: "git+https://github.com/marcoonroad/twostep.git"

build: [
  ["dune" "build" "@check" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [
  ["dune" "build" "@fmt" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "base" {>= "v0.9.3"}
  "hex" {>= "1.2.0"}
  "mirage-crypto" {>= "0.6.1"}
  "mirage-crypto-rng" {>= "0.6.1"}
  "mirage-crypto-pk" {>= "0.6.1"}
  "dune" {>= "2.7.0"}
  "bisect_ppx" {dev & >= "2.5.0"}
  "alcotest" {with-test & >= "0.8.4"}
  "ocamlformat" {with-test & >= "0.15.0"}
]
