(test
 (name rfc6238_errata_samples)
 (modules rfc6238_errata_samples)
 (libraries base hex twostep))

(test
 (name rfc4226_samples)
 (modules rfc4226_samples)
 (libraries base twostep))

(test
 (name api_interface)
 (modules api_interface)
 (libraries base nocrypto nocrypto.unix mirage-crypto mirage-crypto-rng mirage-crypto-rng.unix twostep alcotest))
